--- a/.github/workflows/upload_clang.yml
+++ b/.github/workflows/upload_clang.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - name: install requirements
+        run: pip3 install -r requirements.txt
       - name: Package
         env:
           GITHUB_USERNAME: ${{ github.actor }}
