Try to get the other script to work

--- a/.github/workflows/package_llvm.yml
+++ b/.github/workflows/package_llvm.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -23,5 +23,5 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./package_llvm.py ${{ github.event.inputs.version }}
+        run: ./upload_clang.py ${{ github.event.inputs.version }}
 
