Use gcc9 to avoid random crashes

--- a/ci/image/Dockerfile
+++ b/ci/image/Dockerfile
@@ -5,6 +5,9 @@ ENV LC_ALL C.UTF-8
 
 RUN apt-get update && \
   apt-get -y dist-upgrade && \
+  apt-get -y install software-properties-common && \
+  add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
+  apt-get update && \
   apt-get -y --no-install-recommends install ca-cacert \
                      locales \
                      tzdata \
@@ -14,7 +17,11 @@ RUN apt-get update && \
                      python3-pip \
                      python3-setuptools \
                      p7zip-full \
-                     sudo && \
+                     sudo \
+                     gcc-9 \
+                     g++-9 && \
+  update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 1 \
+                      --slave   /usr/bin/g++ g++ /usr/bin/g++-9 && \
   apt-get -y autoremove
 
 RUN ln -fs /usr/share/zoneinfo/Europe/London /etc/localtime && \
