--- a/.github/workflows/package_llvm.yml
+++ b/.github/workflows/package_llvm.yml
@@ -20,6 +20,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: pip3 install -r requirements.txt
+      - name: Uninstall homebrew
+        run: NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/uninstall.sh)"
       - name: install cross-compilers
         run: sudo apt-get update && sudo apt-get install g++-arm-linux-gnueabihf gcc-arm-linux-gnueabihf g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
       - name: Package
