--- a/.github/workflows/package_llvm.yml
+++ b/.github/workflows/package_llvm.yml
@@ -30,12 +30,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./package_llvm.py --target-architecture ${{ matrix.target }} ${{ github.event.inputs.version }}
 
-  build-macos:
-    runs-on: macos-11
+  build-macos-x86:
+    runs-on: macos-13
     strategy:
       fail-fast: false
-      matrix:
-        target: [ x86_64, arm64 ]
     steps:
       - uses: actions/checkout@v4
       - name: install requirements
@@ -44,4 +42,18 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./package_llvm.py --target-architecture ${{ matrix.target }} ${{ github.event.inputs.version }}
+        run: ./package_llvm.py --target-architecture x86_64 ${{ github.event.inputs.version }}
+
+  build-macos-arm64:
+    runs-on: macos-14
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - name: install requirements
+        run: pip3 install -r requirements.txt
+      - name: Package
+        env:
+          GITHUB_USERNAME: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./package_llvm.py --target-architecture arm64 ${{ github.event.inputs.version }}
