--- a/.github/workflows/package_llvm.yml
+++ b/.github/workflows/package_llvm.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: install requirements
-        run: pip3 install -r requirements.txt
+        run: pip3 install --break-system-packages -r requirements.txt
       - name: Package
         env:
           GITHUB_USERNAME: ${{ github.actor }}
